Fix cattool on mobile

--- a/public/css/sass/common.scss
+++ b/public/css/sass/common.scss
@@ -20,24 +20,6 @@ textarea {
   font-size: 16px;
 }
 
-@media (max-width: 500px) {
-  body {
-    min-width: 0 !important;
-    width: 100%;
-  }
-  .iepopup {
-    width: 90% !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    left: 0 !important;
-    border: 0px solid #fff !important;
-    box-shadow: none !important;
-  }
-  .iepopup img {
-    width: 20% !important;
-  }
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -4621,7 +4603,6 @@ body.side-popup {
 
 @media (max-width: 768px) {
   body {
-    min-width: unset;
     background-color: #f5f6f7;
     height: fill-available;
     height: -webkit-fill-available;
